spacing fixes

--- a/packages/ticket-management/common/FilterTicketsSection/FilterType/SearchType/styles.module.css
+++ b/packages/ticket-management/common/FilterTicketsSection/FilterType/SearchType/styles.module.css
@@ -19,7 +19,7 @@
 	@media screen and (max-width: 768px) {
 		display: block;
 		width: 100%;
-		margin-bottom: 4px;
+		margin-bottom: 8px;
 	}
 }
 
@@ -30,7 +30,7 @@
 	@media screen and (max-width: 768px) {
 		display: block;
 		width: 100%;
-		margin-bottom: 4px;
+		margin-bottom: 8px;
 		margin-left: 0;
 	}
 }
@@ -46,6 +46,7 @@
 
 	@media screen and (max-width: 768px) {
 		width: 100%;
+		margin-bottom: 8px;
 		margin-left: 0;
 	}
 }
